added code to HTML file

--- a/index.html
+++ b/index.html
@@ -9,10 +9,73 @@
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <img 
+      
+      src="./assets/bowtie-cat.png" 
+      alt="Profile image of cat wearing a bow tie." 
+      />
+
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class ="card" id="html-section">
+
+        <h2>HTML</h2>
+
+        <ul>
+
+          <li>the head element contains information about the webpage</li>
+
+          <li>The body element represents the visable content shown to the user</li>
+
+          <li>The Meta data is data about our webpage that the browser uses to effectivly serve our users</li>
+
+          <li>The DOCTYPE line of code lets the browser know what document type it should expect</li>
+
+        </ul>
+
+      </section> 
+
+
+      <section class="card" id="css-section">
+
+        <h2>CSS</h2>
+        <ul> 
+
+          <li>Enter CCS Notes Here</li>
+
+        </ul>
+
+
+      </section>
+
+      <section class="card" id="git section">
+
+        <h2>Git</h2>
+
+        <ul> 
+
+          <li>git status: check what branch we are currently on</li>
+          <li>git checkout -b branch-name: created a new branch and switches to it<li>
+          <li>git clear: clears terminal</li>
+          <li>git add -A: adds all untracked files to be commited</li>
+
+        </ul>
+
+
+      </section>
+
+      <section class="card" id="javascript section">
+        <h2>JavaScript</h2>
+        
+        <ul> 
+
+          <li>Eneter Your Java notes here</li>
+
+        </ul>
+
+
+      </section>
+
     </main>
 
     <footer>
