--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -41,7 +42,10 @@
         <h2>CSS</h2>
         <ul> 
 
-          <li>Enter CCS Notes Here</li>
+          <li>A margin indicates how much space we want arounf the outside of an element</li>
+          <li>A padding indicates how much space we need arount the content insde an element</li>
+          <li>The heght command can be used to adjust how large an image is</li>
+          <li>The width command can be used to adjust how wide an image is</li>
 
         </ul>
 
