--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
         
         <ul> 
 
-          <li>Eneter Your Java notes here</li>
-
+          <li>A variable is a named container that allows us to store data in our code</li>
+          <li>Control FLow is the order in which a computer executes code in a script</li>
+          <li>A For loop allows us to check hundreds or thousands of pieces of data without writing individual code</li>
+          <li>A if statement allows us to run special code if a certain condition is met</li>
         </ul>
 
 
